--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,14 @@
         android:theme="@style/Theme.EjerciciosInterfaces"
         tools:targetApi="31">
         <activity
+            android:name=".Lista_opciones"
+            android:exported="false" />
+        <activity
             android:name=".Ejemplo1"
             android:exported="false" />
         <activity
             android:name=".Pizzeria"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
