--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.EjerciciosInterfaces"
         tools:targetApi="31">
         <activity
+            android:name=".ListaCheckBox"
+            android:exported="false" />
+        <activity
             android:name=".Lista_opciones"
             android:exported="false" />
         <activity
